fix z-index issues with top bar in designer

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -146,6 +146,11 @@ body {
   -webkit-transition: 0.5s all;
 }
 
+#intercom-container {
+  z-index: 1;
+  position: relative;
+}
+
 .profile-card {
   margin: 1em;
 
